--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "jsx-a11y"
   ],
   "rules": {
+    "semi": ["error", "never"],
     "max-len": 0,
     "no-console": 0,
     "arrow-parens": 0,
