--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "url": "git@github.com:serverless/serverless-graphql-apollo.git"
   },
   "scripts": {
-    "start-client-local": "cd ../app-client/ && npm start",
-    "start-server-lambda:offline": "env-cmd ../config/security.env.local serverless offline start",
-    "deploy-server-lambda-prod": "serverless --stage=production deploy",
+    "start-server-lambda:offline": "env-cmd ../config/security.env.local serverless --aws-profile akagi offline start",
+    "deploy-server-lambda-prod": "serverless --aws-profile akagi --stage=production deploy",
     "lint": "eslint . --cache"
   },
   "dependencies": {
@@ -17,8 +16,10 @@
     "apollo-server-module-graphiql": "^1.1.2",
     "babel-polyfill": "^6.16.0",
     "babel-runtime": "^6.25.0",
+    "fb-messenger": "^1.2.0",
     "graphql": "^0.10.5",
     "graphql-tools": "^1.0.0",
+    "lodash": "^4.17.4",
     "moment": "^2.19.1"
   },
   "devDependencies": {
