--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "git@github.com:serverless/serverless-graphql-apollo.git"
   },
   "scripts": {
+    "dev": "yarn run start-server-lambda:offline",
     "start-server-lambda:offline": "env-cmd ../config/security.env.local serverless --aws-profile akagi offline start",
     "deploy-server-lambda-prod": "serverless --aws-profile akagi --stage=production deploy",
     "lint": "eslint . --cache"
