--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "yarn run start-server-lambda:offline",
+    "deploy": "yarn run deploy-server-lambda-prod",
     "start-server-lambda:offline": "env-cmd ../config/security.env.local serverless --aws-profile akagi offline start",
     "deploy-server-lambda-prod": "serverless --aws-profile akagi --stage=production deploy",
     "lint": "eslint . --cache"
@@ -21,6 +22,7 @@
     "graphql": "^0.10.5",
     "graphql-tools": "^1.0.0",
     "lodash": "^4.17.4",
+    "mailgun-js": "^0.14.1",
     "moment": "^2.19.1"
   },
   "devDependencies": {
